--- a/partials/home.html
+++ b/partials/home.html
@@ -15,10 +15,10 @@
         <a href="#" class="btn btn-xxlarge btn-default banner-btn" >Play</a>
 
 
-        <h3 class="white-text banner-text taco-sweeper show">Something something taco donald trump</h3>
-        <h3 class="white-text banner-text pacman">a taco game, just for you.</h3>
-        <h3 class="white-text banner-text tacowars">managing your own taco empire can be tough.</h3>
-        <h3 class="white-text banner-text horoscope">The answers you seek, in the Big Taco.</h3>
+        <h3 class="white-text banner-text taco-sweeper-text show">Something something taco donald trump</h3>
+        <h3 class="white-text banner-text pacman-text">a taco game, just for you.</h3>
+        <h3 class="white-text banner-text tacowars-text">managing your own taco empire can be tough.</h3>
+        <h3 class="white-text banner-text horoscope-text">The answers you seek, in the Big Taco.</h3>
       </div>
     </div>
   </div>
