edits header css.

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,6 @@
 <section id="home-banner">
   <div class="container">
-    <div class="banner-bg toggle-image bg-taco-sweeper"></div>
+    <div class="banner-bg toggle-image bg-taco-sweeper show"></div>
     <div class="banner-bg toggle-image bg-pacman"></div>
     <div class="banner-bg toggle-image bg-tacowars"></div>
     <div class="banner-bg toggle-image bg-horoscope"></div>
