--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   padding-top: 60px;
   font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  background-color: #FFF7E2;
 }
 
 
@@ -20,6 +21,19 @@ body {
 
 .navbar {
   border: 0px;
+  background-color: #AAD049;
+  padding-bottom: 10px;
+
+}
+
+.navbar-brand {
+  font-size: 24px;
+  text-align: center;
+}
+
+a, navbar {
+  color: #B52417;
+  text-decoration: none;
 }
 
 
@@ -38,7 +52,7 @@ body {
   top: 70;
   left: 0;
   height: 600px;
-  transition: opacity 2.5s ease-in-out;
+  transition: opacity 1s ease-in-out;
   /*padding-top: 100px;*/
 }
 
