--- a/partials/header.html
+++ b/partials/header.html
@@ -9,12 +9,12 @@
        </button>
        <a class="navbar-brand" href="#">El Taco Diario</a>
      </div>
-     <div id="navbar" class="collapse navbar-collapse">
+     <!-- <div id="navbar" class="collapse navbar-collapse">
        <ul class="nav navbar-nav navbar-right">
          <li class="active"><a href="#login">Login</a></li>
          <li><a href="#signup">Signup</a></li>
          <li><a href="#contact">Post a Project</a></li>
-       </ul>
+       </ul> -->
      </div><!--/.nav-collapse -->
    </div>
  </nav>
