--- a/partials/home.html
+++ b/partials/home.html
@@ -9,15 +9,15 @@
       <div class="col-sm-6" id="banner-col">
         <h1 class="white-text">The daily taco: more than a lifestyle.</h1>
 
-        <p class="white-text subheader-text">Millions of people have found life fulfillment with a daily taco. Need inspiration? Click here.</p>
+        <p class="white-text subheader-text">Fulfillment. One taco at a time.</p>
 
         <a href="#" class="btn btn-xxlarge btn-default banner-btn" >Eat</a>
         <a href="#" class="btn btn-xxlarge btn-default banner-btn" >Play</a>
 
 
         <h3 class="white-text banner-text taco-sweeper-text show">Something something taco donald trump</h3>
-        <h3 class="white-text banner-text pacman-text">a taco game, just for you.</h3>
-        <h3 class="white-text banner-text tacowars-text">managing your own taco empire can be tough.</h3>
+        <h3 class="white-text banner-text pacman-text">A taco game, just for you.</h3>
+        <h3 class="white-text banner-text tacowars-text">Managing your own taco empire can be tough.</h3>
         <h3 class="white-text banner-text horoscope-text">The answers you seek, in the Big Taco.</h3>
       </div>
     </div>
