--- a/partials/showcase.html
+++ b/partials/showcase.html
@@ -3,12 +3,12 @@
     <h2 class="showcase-title" show-overlay>La Vida Taquera.</h2>
 
     <ul class="flex-container">
-      <li class="flex-item">1</li>
-      <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
-      <li class="flex-item">4</li>
-      <li class="flex-item">5</li>
-      <li class="flex-item">6</li>
+      <li class="flex-item">Sweeper</li>
+      <li class="flex-item">Pacman</li>
+      <li class="flex-item">Tacowars</li>
+      <li class="flex-item">Horoscope</li>
+      <li class="flex-item">Locations</li>
+      <li class="flex-item">About us.</li>
     </ul>
   </div>
 </section>
