--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
-<section id="home-banner">
   <div class="container">
+<section id="home-banner bg-gradient">
     <div class="banner-bg toggle-image bg-taco-sweeper show"></div>
     <div class="banner-bg toggle-image bg-pacman"></div>
     <div class="banner-bg toggle-image bg-tacowars"></div>
@@ -21,5 +21,5 @@
         <h3 class="white-text banner-text horoscope-text">The answers you seek, in the Big Taco.</h3>
       </div>
     </div>
-  </div>
 </section>
+  </div>
