--- a/partials/showcase.html
+++ b/partials/showcase.html
@@ -1,4 +1,4 @@
-<section class= "showcase">
+<section id="showcase">
   <div class = "container">
     <h2 class="showcase-title" show-overlay>La Vida Taquera.</h2>
 
