--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,20 +1,19 @@
-<nav class="navbar navbar-fixed-bottom">
-   <div class="container">
+<!-- <nav class="navbar navbar-fixed-bottom custom-footer"> -->
+   <!-- <div class="container">
      <div class="navbar-header">
        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
          <span class="sr-only">Toggle navigation</span>
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
-       </button>
-       <a class="navbar-brand" href="#">El Taco Diario</a>
+       </button> -->
+       <!-- <h5 class="navbar-brand">El Taco Diario</h5>
      </div>
-     <!-- <div id="navbar" class="collapse navbar-collapse">
-       <ul class="nav navbar-nav navbar-right">
-         <li class="active"><a href="#login">Login</a></li>
-         <li><a href="#signup">Signup</a></li>
-         <li><a href="#contact">Post a Project</a></li>
-       </ul> -->
+
      </div>
    </div>
- </nav>
+ </nav> -->
+
+<div class="custom-footer">
+  <h5>El Taco Diaro</h5>
+</div>
