--- a/partials/showcase.html
+++ b/partials/showcase.html
@@ -3,11 +3,11 @@
     <h2 class="showcase-title" show-overlay>La Vida Taquera.</h2>
 
     <ul class="flex-container">
-      <li class="flex-item">Sweeper</li>
-      <li class="flex-item">Pacman</li>
-      <li class="flex-item">Tacowars</li>
-      <li class="flex-item">Horoscope</li>
-      <li class="flex-item">Locations</li>
+      <li class="flex-item">Taco Sweeper</li>
+      <li class="flex-item">Taco Cowboy</li>
+      <li class="flex-item">Taco Wars</li>
+      <li class="flex-item">r/tacos</li>
+      <li class="flex-item">Where to Eat</li>
       <li class="flex-item">About us.</li>
     </ul>
   </div>
