fixed background for game

--- a/partials/game1.html
+++ b/partials/game1.html
@@ -2,7 +2,7 @@
 <section id="game1">
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 game1">
       <h1>Trump Sweeper</h1>
         <h3 ng-if="isWinMessageVisible">You Won!</h3>
         <h3 ng-if="isLostMessageVisible">You've Lost!</h3>
