--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-fixed-top">
-  <img id="cowboy" class="pull-right" src="/../images/cowboy_sunset.png" alt="cowboysunset" height="100" width="100"/>
+  <img id="cowboy" class="pull-right" src="/../images/cowboy_sunset.png" alt="cowboysunset" height=15% width=15%/>
    <div class="container">
      <div class="navbar-header">
        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
