--- a/partials/game2/home.html
+++ b/partials/game2/home.html
@@ -25,7 +25,7 @@
 <br>
 
 <button type="button" class="btn btn-danger" ui-sref="home.game2game"> <center> Start Game </button>
-  <a ng-click="GamesFactory.showmeWars=false"><h2>X</h2></a>
+  <a ng-click="GamesFactory.showmeWars=false" color-bg><h2>X</h2></a>
 </div>
 </div>
 </section>
