--- a/partials/showcase.html
+++ b/partials/showcase.html
@@ -6,8 +6,8 @@
     <h2 class="showcase-title" show-overlay>La Vida Taquera.</h2>
 
     <ul class="flex-container">
-      <a ui-sref="home.game1" ng-click="GamesFactory.showmeSweeper=true"><li class="flex-item" >Taco Sweeper</li></a>
-      <a ui-sref="home.game2home" ng-click="GamesFactory.showmeWars=true"><li class="flex-item">Taco Wars</li></a>
+      <a ui-sref="home.game1" ng-click="GamesFactory.showmeSweeper=true" color-bg><li class="flex-item" >Taco Sweeper</li></a>
+      <a ui-sref="home.game2home" ng-click="GamesFactory.showmeWars=true" space-bg><li class="flex-item">Taco Wars</li></a>
       <li class="flex-item">Taco Cowboy</li>
       <li class="flex-item">r/tacos</li>
       <li class="flex-item">Where to Eat</li>
