--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,19 @@ body {
 }
 
 .navbar-brand {
-  font-size: 24px;
+  font-size: 2.4em;
   text-align: center;
+  bottom-padding: 0;
 }
 
 a, navbar {
   color: #B52417;
   text-decoration: none;
+}
+
+#cowboy {
+  width: 155px;
+
 }
 
 
