--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-fixed-top">
-  <img id="cowboy" class="pull-right" src="/../images/cowboy_sunset.png" alt="cowboysunset" height=15% width=15%/>
+  <img id="cowboy" class="pull-left" src="/../images/cowboy_sunset.png" alt="cowboysunset">
    <div class="container">
      <div class="navbar-header">
        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -10,12 +10,6 @@
        </button>
        <a class="navbar-brand" href="#">El Taco Diario</a>
      </div>
-     <!-- <div id="navbar" class="collapse navbar-collapse">
-       <ul class="nav navbar-nav navbar-right">
-         <li class="active"><a href="#login">Login</a></li>
-         <li><a href="#signup">Signup</a></li>
-         <li><a href="#contact">Post a Project</a></li>
-       </ul> -->
      </div><!--/.nav-collapse -->
    </div>
  </nav>
