--- a/partials/game2/home.html
+++ b/partials/game2/home.html
@@ -1,5 +1,5 @@
-<br> <br>
-<section id="game2" ng-show="GamesFactory.showmeWars==true">
+<br> <br> <br> <br>
+<section id="game2" ng-show="GamesFactory.showmeWars=true">
 <div class="row">
   <div class="col-lg-4">
     <h1 id="banner-hero">THE HERO</h1>
@@ -24,8 +24,8 @@
 
 <br>
 
-<button type="button" class="btn btn-danger" ui-sref="home.game2game"> <center> Start Game </button>
-  <a ng-click="GamesFactory.showmeWars=false" color-bg><h2>X</h2></a>
+<button type="button" class="btn btn-danger" ui-sref="game2game"> <center> Start Game </button>
+  <a ui-sref="home" color-bg><h2>X</h2></a>
 </div>
 </div>
 </section>
