--- a/partials/game2/game.html
+++ b/partials/game2/game.html
@@ -114,7 +114,7 @@
   <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 gamelog">
     <h1><center>  GAME LOG </h1>
     <p ng-if="dayEvent"> {{ dayEvent }} </p>
-    <a ng-click="GamesFactory.showmeWars=false" color-bg><p>Exit Game</p></a>
+    <a ui-sref="home" color-bg><p>Exit Game</p></a>
   </div>
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 locations">
     <h1> <center> LOCATIONS   </h1>
