--- a/partials/showcase.html
+++ b/partials/showcase.html
@@ -8,9 +8,9 @@
     <ul class="flex-container">
       <a ui-sref="game1" ng-click="GamesFactory.showmeSweeper=true" color-bg><li class="flex-item" >Taco Sweeper</li></a>
       <a ui-sref="game2home" ng-click="GamesFactory.showmeWars=true" space-bg><li class="flex-item">Taco Wars</li></a>
-      <li class="flex-item">Taco Cowboy</li>
-      <li class="flex-item">r/tacos</li>
-      <li class="flex-item">Where to Eat</li>
+      <a ui-sref="dino" ng-click="GamesFactory.showmeDino=true" color-bg><li class="flex-item">Taco Cowboy</li></a>
+      <a href="https://www.reddit.com/r/tacos"><li class="flex-item">r/tacos</li></a>
+      <a href="http://www.yelp.com/search?find_desc=tacos&find_loc=Portland,+OR&start=0&sortby=rating"><li class="flex-item">Where to Eat</li></a>
       <li class="flex-item">About us.</li>
     </ul>
   </div>
