--- a/partials/home.html
+++ b/partials/home.html
@@ -11,8 +11,8 @@
 
         <p class="white-text subheader-text">Fulfillment. One taco at a time.</p>
 
-        <a href="#" class="btn btn-xxlarge btn-default banner-btn" >Eat</a>
-        <a href="#" class="btn btn-xxlarge btn-default banner-btn" >Play</a>
+        <a href="https://www.reddit.com/r/tacos" class="btn btn-xxlarge btn-default banner-btn">Eat</a>
+        <a ui-sref="game1" ng-click="GamesFactory.showmeSweeper=true" color-bg class="btn btn-xxlarge btn-default banner-btn">Play</a>
 
 
         <h3 class="white-text banner-text taco-sweeper-text show">Something something taco donald trump</h3>
